update readme and add temp key

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=a11e730eb302441671688338a526e5a4
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
